--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </tr>
                 <tr>
                     <th>Product Size</th>
-                    <td>Length Dia.13.5cm x Width H17cm x Height 13.5cm</td>
+                    <td>Dia- 13.5cm x Height H17cm</td>
                 </tr>
                 <tr>
                     <th>Product CBM</th>
@@ -208,3 +208,4 @@
     </div>
 </body>
 </html>
+
